# Five-Safes-TES-Analytics

./: .gitignore  API_REFERENCE.md  README.md  analyser.py  analysis_engine.py  analysis_orchestrator.py  analysis_runner.py  analytics_tes  analytics_tes.py  bunny_tes  bunny_tes.py  config.py  data_processor.py  env.example  metadata.py  metadata_runner.py  minio_client.py  parse_bunny.py  polling.py  pyproject.toml  pytest.ini  query_builder.py  query_gen.py  requirements.txt  statistical_analyzer.py  submission_api_session.py  tes_client.py
.github/workflows/: check.container-build.yml  check.container-run.yml  check.run-tests.yml  release.bunny.yml  release.dev.yml
Container/: Dockerfile  local_processing.py  query_resolver.py
analysis demo container/: Dockerfile  local_processing_base.py
docker/: Dockerfile  local_processing.py  local_processing_base.py  query_resolver.py
docker/analytics-dev/: Dockerfile  README.md  test.compose.yml
docker/bunny-wrapper/: Dockerfile  README.md  entrypoint.sh  test.compose.yml
docs/: Developer Overview.md
examples/: Bunny visualisations.html  Bunny visualisations.ipynb  README.md  analysis_examples.py  bunny_utils.py  query_examples.py
examples/bunny-dummy-data/: narnia-tsv-dummy.json  the-moon-tsv-dummy.json  tingham-tsv-dummy.json
tests/: README.md  README_Docker_Testing.md  conftest.py  test_analysis_compatibility.py  test_bunny_parser.py  test_bunny_wrapper.py  test_contingency_table.py  test_docker_container.py  test_docker_runner.py  test_local_processing.py  test_polling.py  test_query_resolver_env.py  test_refactored.py  test_submission_api_session.py  test_tes_functionality.py
tests/integration/: test_docker_runner.py  test_submission_api_session_integration.py
tests/test-data/: 100concepts.json  100kconcepts.json
tests/unit/: test_analysis_runner.py  test_analysis_workflows.py  test_analytics_tes_client.py  test_base_tes_client.py  (+9 more)
(+18 files in other folders)
