[project]
name = "tre-fx-federated-analysis"
version = "0.1.0"
description = "Federated analysis tools for TRE-FX"
authors = [{ name = "Anwar" }]
requires-python = ">=3.10, <3.13"
readme = "README.md"
dependencies = [
    "numpy>=2.2.6,<3",
    "scipy>=1.15.3,<2",
    "requests>=2.32.4,<3",
    "pandas>=1.3.0,<2",
    "minio>=7.0.0,<8",
    "pytest>=7.0.0,<8",
    "python-dotenv>=1.0.0,<2",
    "py-tes>=1.1.0,<2",
    "sqlalchemy>=2.0.43",
    "pydantic-settings>=2.10.1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
