[tool.poetry]
name = "tre-fx-federated-analysis"
version = "0.1.0"
description = "Federated analysis tools for TRE-FX"
authors = ["Anwar"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.6"
scipy = "^1.15.3"
requests = "^2.32.4"
pytest-mock = "^3.14.1"
sqlalchemy = "^2.0.44"
click = "^8.3.0"
tdigest = "^0.5.2.2"
minio = "^7.0.0"
pytest = "^7.0.0"
python-dotenv = "^1.0.0"
py-tes = "^1.1.2"
pydantic = "^2.12.5"
polars = "^1.38.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
