[project]
name = "tre-fx-federated-analysis"
version = "0.1.0"
description = "Federated analysis tools for TRE-FX"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Anwar" }
]
dependencies = [
  "numpy>=2.2.6,<3.0.0",
  "scipy>=1.15.3,<2.0.0",
  "requests>=2.32.4,<3.0.0",
  "sqlalchemy>=2.0.44,<3.0.0",
  "click>=8.3.0,<9.0.0",
  "tdigest>=0.5.2.2,<0.6.0",
  "minio>=7.0.0,<8.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "py-tes>=1.1.2,<2.0.0",
  "pydantic>=2.12.5,<3.0.0",
  "polars>=1.38.1,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0,<8.0.0",
  "pytest-mock>=3.14.1,<4.0.0"
]
